@@ -1,6 +1,11 @@
 2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	[BZ #12683]
+	* sysdeps/unix/sysv/linux/microblaze/syscall_cancel.S: New file.
+	* sysdeps/unix/sysv/linux/microblaze/sigcontextinfo.h
+	(ucontext_get_pc): New function.
+
+	[BZ #12683]
 	* sysdeps/unix/sysv/linux/m68k/sigcontextinfo.h (ucontext_get_pc):
 	New function.
 
